# seccomp-privacy-platform

./: .dockerignore  .env.example  .gitignore  1.md  API_Docs.md  CODEX_CONTEXT.md  DIRECTORY_STRUCTURE.md  Dockerfile  LOG.md  NOTICE  README.md  TASK_ENGINEER_B_QUERY_CATALOG_WORKFLOW_OBSERVABILITY.md  TASK_OWNER_PRIVACY_CORE_AND_INTERFACE_GOVERNANCE.md  TODO.md  ad_client_main.py  benchmark.py  c_gateway_api.md  db.json  docker-compose.authority.yml  docker-compose.release.yml  example_multi_key_db.json  example_usage.py  global_config.py  main.py  pyproject.toml  requirements.txt  review.md  run_client.py  store.py  temp.txt  test_dataset_encryption.py
a-psi/: README.md
ad_client/: README.md  __init__.py
app/: config.py  errors.py  logging_setup.py  main.py  schemas.py
benchmark/: BENCHMARK_REPORT.md
bridge/: Cargo.toml  README.md
client/: README.md  requirements.txt
config/: api_identity_tokens.example.json  business_access_policy.ecommerce.example.json  external_kms.example.json  identity_proxy.example.json  key_manifest.example.json  keycloak_realm_seccomp_privacy.json  keyring.example.json  keyring.production.example.json  metadata_registry.example.json  oidc_claim_mapping.example.json  openfga.example.json  openfga_authorization_model.json  pjc_resource_limits.example.json  privacy_budget.example.json  record_recovery_authz_sqlite.example.json  record_recovery_http_mtls_service.example.json  record_recovery_http_service.example.json  record_recovery_service.example.json  record_recovery_service_policy.example.json  release_policy_gate.example.json  (+7 more)
(+913 files in other folders)
